crates/panache-parser/tests/snapshots/yaml__yaml_suite_BEC7.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 246
expression: snapshot
---
case_id: BEC7
input: "%YAML 1.3 # Attempt parsing\n          # with a warning\n---\n\"foo\"\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
