crates/panache-parser/tests/snapshots/yaml__yaml_suite_BF9H.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: BF9H
input: "---\nplain: a\n       b # end of scalar\n       c\n"
has_error_contract: true
parsed_mapping_tree: false
diagnostics: [YAML_PARSE_INVALID_KEY_TOKEN:invalid token while parsing block map key@20..37]
