crates/panache-parser/tests/snapshots/yaml__yaml_suite_BS4K.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 298
expression: snapshot
---
case_id: BS4K
input: "word1  # comment\nword2\n"
has_error_contract: true
parsed_mapping_tree: false
diagnostics: [YAML_PARSE_UNEXPECTED_DEDENT:comment cannot appear inside a multi-line plain scalar@17..22]
