crates/panache-parser/tests/snapshots/yaml__yaml_suite_C2DT.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 245
expression: snapshot
---
case_id: C2DT
input: "{\n\"adjacent\":value,\n\"readable\": value,\n\"empty\":\n}\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
