crates/panache-parser/tests/snapshots/yaml__yaml_suite_C2SP.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: C2SP
input: "[23\n]: 42\n"
has_error_contract: true
parsed_mapping_tree: false
diagnostics: [YAML_PARSE_UNTERMINATED_FLOW_SEQUENCE:unterminated flow sequence@0..10]
