crates/panache-parser/tests/snapshots/yaml__yaml_suite_CC74.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 245
expression: snapshot
---
case_id: CC74
input: "%TAG !e! tag:example.com,2000:app/\n---\n!e!foo \"bar\"\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
