crates/panache-parser/tests/snapshots/yaml__yaml_suite_CFD4.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 245
expression: snapshot
---
case_id: CFD4
input: "- [ : empty key ]\n- [: another empty key]\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
