crates/panache-parser/tests/snapshots/yaml__yaml_suite_CPZ3.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: CPZ3
input: "---\ntab: \"\\tstring\"\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
