crates/panache-parser/tests/snapshots/yaml__yaml_suite_CT4Q.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 245
expression: snapshot
---
case_id: CT4Q
input: "[\n? foo\n bar : baz\n]\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
